--- a/index.html
+++ b/index.html
@@ -152,14 +152,12 @@
                         <div class="service_left">
                             <div class="edrea_title bg_white">
                                 <h3 class="title">Al crear <br> <span>Productos Digitales</span></h3>
-                                <p class="description">con informes cualitativos y cuantitativos</p>
+                                <p class="description">con informes cualitativos y cuantitativos <br>en la estrategia de negocio.</p>
                             </div>
-                        </div>
-                        <div class="service_right">
-                            <div class="edrea_title">
+                            <!--  <div class="edrea_title m-5">
                                 <h3 class="title">Impacto <span>del UX</span></h3>
                                 <p class="description"> en la estrategia de negocio.</p>
-                            </div>
+                            </div> -->
                             <div class="edrea_checklist">
                                 <ul>
                                     <li>
@@ -177,6 +175,28 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="service_right">
+                            <div class="edrea_title">
+                                <!-- <p class="sub_text"><span>experts growts</span></p> -->
+                                <h3 class="title">Tipos de proyecto <br>del <span>UX Lab</span></h3>
+                            </div>
+                            <div class="edrea_checklist">
+                                <ul>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h3>De cero</h3>
+                                    </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h3>Evolutivo</h3>
+                                    </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h3>Rediseño</h3>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -184,24 +204,13 @@
         <!-- /Services -->
         <!-- Information -->
         <section id="information">
-            <div class="edrea_information">
+            <div class="edrea_services">
                 <div class="container">
                     <div class="content">
                         <div class="info_left">
                             <div class="edrea_title">
-                                <!-- <p class="sub_text"><span>experts growts</span></p> -->
-                                <h3 class="title">Tipos de proyecto <br>del <span>UX Lab</span></h3>
-                            </div>
-                            
-                                    <h5>De Cero</h5>
-                                    <h5>Evolutivo</h5>
-                                    <h5>Rediseño</h5>
                                 
-                        </div>
-                        <div class="info_right">
-                            <div class="edrea_title">
-                                <!-- <p class="sub_text"><span>experts growts</span></p> -->
-                                <h3 class="title">Stakeholders comparten <span>visión y objetivos</span></h3>
+                                <h3 class="title"><span>Stakeholders</span> comparten <br><span>visión y objetivos</span></h3>
                             </div>
                             <div class="edrea_checklist">
                                 <ul>
@@ -213,6 +222,27 @@
                                     </li>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
                                         <h5>3. Calendario claro</h5>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="info_right">
+                            <div class="edrea_title">
+
+                                <!-- <p class="sub_text"><span>experts growts</span></p> -->
+                                <h3 class="title">Que <strong><span>NO</span></strong> deben <br> hacer los <span> Stakeholders</span></h3>
+                            </div>
+                            <p class="sub_text"><span>*Stakeholders son los interesados en el proyecto</span></p>
+                            <div class="edrea_checklist">
+                                <ul>
+                                    <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h5>1. Preocuparse por el UX</h5>
+                                    </li>
+                                    <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h5>2. Suponer comportamientos sin investigación</h5>
+                                    </li>
+                                    <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h5>3. Querer Solucionar problemas de UX</h5>
                                     </li>
                                 </ul>
                             </div>
@@ -231,7 +261,7 @@
                             <div class="edrea_title">
                                 <p class="sub_text"><span>testimonios</span></p>
                                 <h3 class="title">Proyectos <span>Hechos desde</span> Casa</h3>
-                                <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renobar sus productos?</p>
+                                <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar sus productos?</p>
                             </div>
                         </div>
                         <div class="testi_right">
@@ -246,8 +276,8 @@
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/1.jpg"></span>
-                                                <h3>Jaycee Christian</h3>
-                                                <p>Customer</p>
+                                                <h3>Luis Vargas</h3>
+                                                <p>Lider de Proyecto TD</p>
                                             </div>
                                         </div>
                                     </div>
@@ -255,13 +285,26 @@
                                         <div class="item_in">
                                             <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
                                             <div class="description">
-                                                <p>Always available to answer any questions. Very knowledgeable about
-                                                    the services they provide. Would recommend to anyone</p>
+                                                <p>It's always a pleasure to work with Edrea and thesz team. They are
+                                                    personable, responsive, and results-oriented!</p>
+                                            </div>
+                                            <div class="title">
+                                                <span class="image" data-img-url="img/testimonial/1.jpg"></span>
+                                                <h3>Gerardo Villela Arredondo</h3>
+                                                <p>Sub Director Operaciones de TI (Paguitos Movil)</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="item_in">
+                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
+                                            <div class="description">
+                                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam officia, dignissimos facere. Labore, culpa, animi. Perferendis, eius aliquam sed! Placeat amet nobis molestiae, cupiditate odio nemo optio eaque quisquam commodi.</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/2.jpg"></span>
-                                                <h3>Willow Davidson</h3>
-                                                <p>Customer</p>
+                                                <h3>Carmen Angelica Can Chable</h3>
+                                                <p>Gerente Mobile TD</p>
                                             </div>
                                         </div>
                                     </div>
@@ -269,13 +312,25 @@
                                         <div class="item_in">
                                             <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
                                             <div class="description">
-                                                <p>Great results. Enjoyable to work with, and most importantly, enabled
-                                                    us to have the presence on the web</p>
+                                                <p>Paguitos Móvil</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/3.jpg"></span>
-                                                <h3>Megan Simpson</h3>
-                                                <p>Customer</p>
+                                                <h3>Santa Rita De Jesus Barbudo Campos</h3>
+                                                <p>Gerente de Voz de Cliente y Diseño de Experiencias Experiencia de Clientes</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="item_in">
+                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
+                                            <div class="description">
+                                                <p>Paguitos Móvil</p>
+                                            </div>
+                                            <div class="title">
+                                                <span class="image" data-img-url="img/testimonial/3.jpg"></span>
+                                                <h3>Jessica Maria Xeque Barrera</h3>
+                                                <p>Coordinador de Compensaciones Compensaciones y Beneficios</p>
                                             </div>
                                         </div>
                                     </div>
