--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <div class="content">
                         <div class="info_left">
                             <div class="edrea_title">
-                                
+                                <p class="sub_text"><span>*Stakeholders interesados del proyecto</span></p>
                                 <h3 class="title"><span>Stakeholders</span> comparten <br><span>visión y objetivos</span></h3>
                             </div>
                             <div class="edrea_checklist">
@@ -232,7 +232,6 @@
                                 <!-- <p class="sub_text"><span>experts growts</span></p> -->
                                 <h3 class="title">Que <strong><span>NO</span></strong> deben <br> hacer los <span> Stakeholders</span></h3>
                             </div>
-                            <p class="sub_text"><span>*Stakeholders son los interesados en el proyecto</span></p>
                             <div class="edrea_checklist">
                                 <ul>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
@@ -276,20 +275,6 @@
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/1.jpg"></span>
-                                                <h3>Luis Vargas</h3>
-                                                <p>Lider de Proyecto TD</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <div class="item_in">
-                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
-                                            <div class="description">
-                                                <p>It's always a pleasure to work with Edrea and thesz team. They are
-                                                    personable, responsive, and results-oriented!</p>
-                                            </div>
-                                            <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/1.jpg"></span>
                                                 <h3>Gerardo Villela Arredondo</h3>
                                                 <p>Sub Director Operaciones de TI (Paguitos Movil)</p>
                                             </div>
@@ -299,12 +284,12 @@
                                         <div class="item_in">
                                             <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
                                             <div class="description">
-                                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam officia, dignissimos facere. Labore, culpa, animi. Perferendis, eius aliquam sed! Placeat amet nobis molestiae, cupiditate odio nemo optio eaque quisquam commodi.</p>
+                                                <p>Lider de Proyectos TD</p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/2.jpg"></span>
                                                 <h3>Carmen Angelica Can Chable</h3>
-                                                <p>Gerente Mobile TD</p>
+                                                <p>Gerente Mobile</p>
                                             </div>
                                         </div>
                                     </div>
@@ -318,19 +303,6 @@
                                                 <span class="image" data-img-url="img/testimonial/3.jpg"></span>
                                                 <h3>Santa Rita De Jesus Barbudo Campos</h3>
                                                 <p>Gerente de Voz de Cliente y Diseño de Experiencias Experiencia de Clientes</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <div class="item_in">
-                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
-                                            <div class="description">
-                                                <p>Paguitos Móvil</p>
-                                            </div>
-                                            <div class="title">
-                                                <span class="image" data-img-url="img/testimonial/3.jpg"></span>
-                                                <h3>Jessica Maria Xeque Barrera</h3>
-                                                <p>Coordinador de Compensaciones Compensaciones y Beneficios</p>
                                             </div>
                                         </div>
                                     </div>
@@ -601,6 +573,7 @@
         <footer class="edrea_footer">
             <div class="container">
                 <div class="content">
+                    <p>Julio C. Poxtan D. / Diseñador UX UI</p>
                 </div>
             </div>
         </footer>
