--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="container">
                     <div class="topbar_inner">
                         <div class="logo">
-                            <a href="index-dark.html"><img src="img/logo/Logotipo-Macropay.svg" alt="" /></a>
+                            <a href="index.html"><img src="img/logo/Logotipo-Macropay.svg" alt="" /></a>
                         </div>
                         <div class="menu">
                             <ul class="anchor_nav">
@@ -89,7 +89,7 @@
                 <div class="container">
                     <div class="mobile_in">
                         <div class="logo">
-                            <a href="intro.html"><img src="img/logo/Logotipo-Macropay.svg" alt="brand" /></a>
+                            <a href="index.html"><img src="img/logo/Logotipo-Macropay.svg" alt="brand" /></a>
                         </div>
                         <div class="my_trigger">
                             <div class="hamburger hamburger--collapse-r">
