--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                     <div class="content">
                         <div class="testi_left">
                             <div class="edrea_title">
-                                <p class="sub_text"><span>testimonios</span></p>
-                                <h3 class="title">Proyectos <span>Hechos desde</span> Casa</h3>
+                                <p class="sub_text"><span>Testimonios</span></p>
+                                <h3 class="title">Proyectos <br> hechos desde <span>Casa</span></h3>
                                 <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar sus productos?</p>
                             </div>
                         </div>
