--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                 </div>
             </div>
         </section>
-        <!-- /Services -->
-        <!-- Information -->
+        <!-- /servicios -->
+        <!-- servicios -->
         <section id="information">
             <div class="edrea_services">
                 <div class="container">
@@ -228,7 +228,6 @@
                         </div>
                         <div class="info_right">
                             <div class="edrea_title">
-
                                 <!-- <p class="sub_text"><span>experts growts</span></p> -->
                                 <h3 class="title">Que <strong><span>NO</span></strong> deben <br> hacer los <span> Stakeholders</span></h3>
                             </div>
@@ -242,6 +241,103 @@
                                     </li>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
                                         <h5>3. Querer Solucionar problemas de UX</h5>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /servicios -->
+        <!-- Information -->
+        <section id="information">
+            <div class="edrea_information">
+                <div class="container">
+                    <div class="content">
+                        <div class="info_left">
+                            <h3 class="title">Ventajas del <span>UX Lab</span></h3>
+                            <br>
+                            <ul class="masonry">
+                                <li class="masonry_item">
+                                    <div class="item">
+                                        <span class="icon"><img class="svg custom" src="img/svg/icons8-rescan_document.svg" alt="svg" /></span>
+                                        <p>Tener documentación.</p>
+                                    </div>
+                                </li>
+                                <li class="masonry_item">
+                                    <div class="item">
+                                        <span class="icon"><img class="svg custom" src="img/svg/icons8-details.svg" alt="svg" /></span>
+                                        <p>Crear un Sistema de Diseño centralizado, controlado y shareable. </p>
+                                    </div>
+                                </li>
+                                <li class="masonry_item">
+                                    <div class="item">
+                                        <span class="icon"><img class="svg custom" src="img/svg/icons8-transformation_skill.svg" alt="svg" /></span>
+                                        <p>Promueve la transformación.</p>
+                                    </div>
+                                </li>
+                                <li class="masonry_item">
+                                    <div class="item">
+                                        <span class="icon"><img class="svg custom" src="img/svg/award.svg" alt="svg" /></span>
+                                        <p>Tener a los usuarios presente y cerca</p>
+                                    </div>
+                                </li>
+                                <li class="masonry_item">
+                                    <div class="item">
+                                        <span class="icon"><img class="svg custom" src="img/svg/award.svg" alt="svg" /></span>
+                                        <p>Objetivos de usuario y negocio alineados</p>
+                                    </div>
+                                </li>
+                                <li class="masonry_item">
+                                    <div class="item">
+                                        <span class="icon"><img class="svg custom" src="img/svg/award.svg" alt="svg" /></span>
+                                        <p>Pensar, Probar, Testear y aprender</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="info_right">
+                            <div class="edrea_title">
+                                <h3 class="title">Actividades del <br><span>UX Lab</span></h3>
+                                <!-- <p class="description">An engaged employee that is aligned with the company's mission
+                                    and values will be more productive and stay at the company longer</p> -->
+                            </div>
+                            <div class="edrea_checklist">
+                                <ul>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
+                                        <h3>Research</h3>
+                                        <p>* Investigación </p>
+                                        <p>* Objetivos de Negocio</p>
+                                        <p>* Expectativas de Stakeholders</p>
+                                    </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
+                                        <h3>Prototipo de producto</h3>
+                                        <p>* Validación </p>
+                                        <p>* Ajustes</p>
+                                    </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
+                                        <h3>Diseño Visual</h3>
+                                        <p>* Diseño de línea visual UI. </p>
+                                        <p>* Presentación.</p>
+                                        <p>* Validación.</p>
+                                    </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
+                                        <h3>Layout</h3>
+                                        <p>* Lipo de columnas y espaciados. </p>
+                                        <p>* Sistema de Diseño.</p>
+                                        <p>* Guía de implementación para producción.</p>
+                                    </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
+                                        <h3>Datos</h3>
+                                        <p>* Análisis de cada proyecto o producto.</p>
+                                        <p>* Definición de procedimientos.</p>
+                                        <p>* nformes de interacciones y resultados de productos digitales.</p>
                                     </li>
                                 </ul>
                             </div>
