--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                                         <h3>Promueve la transformación</h3>
                                     </li>
                                 </ul>
+
                             </div>
                         </div>
                         <div class="service_right">
@@ -215,13 +216,13 @@
                             <div class="edrea_checklist">
                                 <ul>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h5>1. Reunión inicial</h5>
+                                        <h5>Reunión inicial</h5>
                                     </li>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h5>2. Prioridades</h5>
+                                        <h5>Prioridades</h5>
                                     </li>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h5>3. Calendario claro</h5>
+                                        <h5>Calendario claro</h5>
                                     </li>
                                 </ul>
                             </div>
@@ -234,13 +235,13 @@
                             <div class="edrea_checklist">
                                 <ul>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h5>1. Preocuparse por el UX</h5>
+                                        <h5>Preocuparse por el UX</h5>
                                     </li>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h5>2. Suponer comportamientos sin investigación</h5>
+                                        <h5>Suponer comportamientos sin investigación</h5>
                                     </li>
                                     <li><span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h5>3. Querer Solucionar problemas de UX</h5>
+                                        <h5>Querer Solucionar problemas de UX</h5>
                                     </li>
                                 </ul>
                             </div>
@@ -303,6 +304,7 @@
                                 <!-- <p class="description">An engaged employee that is aligned with the company's mission
                                     and values will be more productive and stay at the company longer</p> -->
                             </div>
+
                             <div class="edrea_checklist">
                                 <ul>
                                     <li>
