--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                     <div class="content">
                         <div class="testi_left">
                             <div class="edrea_title">
-                                <p class="sub_text"><span>Testimonios</span></p>
-                                <h3 class="title">Proyectos <br> hechos desde <span>Casa</span></h3>
+                                <!-- <p class="sub_text"><span>Testimonios</span></p> -->
+                                <h3 class="title">Testimonios</h3>
                                 <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar sus productos?</p>
                             </div>
                         </div>
@@ -366,7 +366,7 @@
                                 <div class="owl-carousel">
                                     <div class="item">
                                         <div class="item_in">
-                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
+                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>It's always a pleasure to work with Edrea and thesz team. They are
                                                     personable, responsive, and results-oriented!</p>
@@ -380,7 +380,7 @@
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
-                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
+                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>Lider de Proyectos TD</p>
                                             </div>
@@ -393,7 +393,7 @@
                                     </div>
                                     <div class="item">
                                         <div class="item_in">
-                                            <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span>
+                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
                                                 <p>Paguitos Móvil</p>
                                             </div>
@@ -427,7 +427,7 @@
                         <div class="edrea_title bg_white">
                             <!--                             <p class="sub_text"><span>Proyectos</span></p>
  -->
-                            <h3 class="title">Proyectos <span>desde casa</span></h3>
+                            <h3 class="title">Proyectos <br> <span>desde casa</span></h3>
                             <p class="description">Browse the latest digital marketing agency news including awards, new
                                 projects and clients, recruitment and partnership announcements.</p>
                         </div>
