--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Barna">
+    <meta name="description" content="UX Lab / Macropay">
     <meta name="author" content="marketify">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -228,7 +228,7 @@
                             </div>
                         </div>
                         <div class="info_right">
-                            <div class="edrea_title">
+                            <div class="edrea_title m-4">
                                 <!-- <p class="sub_text"><span>experts growts</span></p> -->
                                 <h3 class="title">Que <strong><span>NO</span></strong> deben <br> hacer los <span> Stakeholders</span></h3>
                             </div>
