--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!-- /Home -->
         <!-- Services -->
         <section id="ventajas">
-            <div class="edrea_services">
+            <div class="edrea_services aos-animate" data-aos="fade-up">
                 <div class="container">
                     <div class="content">
                         <div class="service_left">
@@ -257,7 +257,7 @@
                 <div class="container">
                     <div class="content">
                         <div class="info_left">
-                            <h3 class="title">Ventajas del <span>UX Lab</span></h3>
+                            <h3 class="title">Ventajas</h3>
                             <br>
                             <ul class="masonry">
                                 <li class="masonry_item">
@@ -280,19 +280,19 @@
                                 </li>
                                 <li class="masonry_item">
                                     <div class="item">
-                                        <span class="icon"><img class="svg custom" src="img/svg/award.svg" alt="svg" /></span>
+                                        <span class="icon"><img class="svg custom" src="img/svg/icons8-busts_in_silhouette.svg" alt="svg" /></span>
                                         <p>Tener a los usuarios presente y cerca</p>
                                     </div>
                                 </li>
                                 <li class="masonry_item">
                                     <div class="item">
-                                        <span class="icon"><img class="svg custom" src="img/svg/award.svg" alt="svg" /></span>
+                                        <span class="icon"><img class="svg custom" src="img/svg/icons8-rocket.svg" alt="svg" /></span>
                                         <p>Objetivos de usuario y negocio alineados</p>
                                     </div>
                                 </li>
                                 <li class="masonry_item">
                                     <div class="item">
-                                        <span class="icon"><img class="svg custom" src="img/svg/award.svg" alt="svg" /></span>
+                                        <span class="icon"><img class="svg custom" src="img/svg/icons8-brainstorm_skill.svg" alt="svg" /></span>
                                         <p>Pensar, Probar, Testear y aprender</p>
                                     </div>
                                 </li>
@@ -300,7 +300,7 @@
                         </div>
                         <div class="info_right">
                             <div class="edrea_title">
-                                <h3 class="title">Actividades del <br><span>UX Lab</span></h3>
+                                <h3 class="title">Actividades</h3>
                                 <!-- <p class="description">An engaged employee that is aligned with the company's mission
                                     and values will be more productive and stay at the company longer</p> -->
                             </div>
@@ -339,7 +339,7 @@
                                         <h3>Datos</h3>
                                         <p>* Análisis de cada proyecto o producto.</p>
                                         <p>* Definición de procedimientos.</p>
-                                        <p>* nformes de interacciones y resultados de productos digitales.</p>
+                                        <p>* Informes de interacciones y resultados de productos digitales.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -427,9 +427,9 @@
                         <div class="edrea_title bg_white">
                             <!--                             <p class="sub_text"><span>Proyectos</span></p>
  -->
-                            <h3 class="title">Proyectos <br> <span>desde casa</span></h3>
-                            <p class="description">Browse the latest digital marketing agency news including awards, new
-                                projects and clients, recruitment and partnership announcements.</p>
+                            <h3 class="title">Proyectos realizados <br> <span>desde casa</span></h3>
+                            <!-- <p class="description">Browse the latest digital marketing agency news including awards, new
+                                projects and clients, recruitment and partnership announcements.</p> -->
                         </div>
                         <div class="edrea_news_slider">
                             <div class="owl-carousel modal_items" data-from="news" data-count="4">
